<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_username_main"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:gravity="center"
                android:text="@string/tv_main_username"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_menu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_username_main">

            <!--    Circle Profile Image   -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_profileImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="7dp"
                android:src="@drawable/img_profile2"
                android:background="@drawable/img_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--    Posts, Followers, Following   -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:paddingVertical="27.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/civ_profileImage"
                app:layout_constraintTop_toTopOf="parent">

                <!--     Posts     -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_postsCount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cl_followersCount"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_posts_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:text="@string/tv_main_post_value"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tv_posts_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tv_posts_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_main_post_text"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_posts_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--     Fllowers     -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_followersCount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cl_following"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cl_postsCount"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_followers_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_main_followers_value"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tv_followers_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tv_followers_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_main_followers_text"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_followers_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--     Following     -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_following"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cl_followersCount"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_following_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_main_following_value"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tv_following_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/tv_following_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_main_following_text"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_following_value" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    Username     -->
        <TextView
            android:id="@+id/tv_username_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/tv_main_username"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/cl_profile"/>

        <!--    Category     -->
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="12dp"
            android:text="@string/tv_main_category"
            android:textColor="#6E6E6E"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_sub"/>

        <!--    Bio     -->
        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingStart="12dp"
            android:text="@string/tv_main_bio"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"/>

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingLeft="12dp"
            android:text="@string/tv_main_link"
            android:textColor="#004C8B"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio"/>

    <!--    <FrameLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="40dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tv_link"/>-->

    <!--    </FrameLayout>-->

        <!--    edit Profile    -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_editProfile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_round"
            android:text="@string/btn_main_edit_profile"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_link"/>

        <!--    post    -->
        <GridView
            android:id="@+id/gv_posts"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintVertical_weight="10"
            android:layout_marginTop="20dp"
            android:numColumns="3"
            android:horizontalSpacing="1dp"
            android:verticalSpacing="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_editProfile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>